[project]
name = "dlts"
version = "0.1.0"
description = "TSFM adaptation experiments for LSST classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "jsonargparse>=4.46.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "tslearn>=0.8.0",
    "wandb>=0.25.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
